--- a/artomaton-node/package.json
+++ b/artomaton-node/package.json
@@ -28,7 +28,7 @@
     "johnny-five": "^0.10.6",
     "matter-js": "^0.12.0",
     "mock-firmata": "^0.1.0",
-    "nuxt": "latest",
+    "nuxt": "0.10.7",
     "p5": "^0.5.7",
     "redux": "^3.6.0",
     "socket.io": "^1.7.3",
